[package]
name = "trillium-compression"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "compression handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
futures-lite = "2.6.1"
trillium = { path = "../trillium", version = "0.3.0" }
log = "0.4.29"

[dependencies.async-compression]
version = "0.4.41"
features = ["brotli", "gzip", "zstd", "futures-io"]

[dev-dependencies]
env_logger = "0.11.10"
trillium-logger = { path = "../logger" }
trillium-router = { path = "../router" }
trillium-smol = { path = "../smol" }
trillium-static = { path = "../static", features = ["smol"] }
trillium-static-compiled = { path = "../static-compiled" }
trillium-testing = { path = "../testing" }

[features]
