[package]
name = "trillium-conformance"
version = "0.0.0"
edition = "2024"
publish = false
description = "External-spec conformance runner for trillium. Runs h2spec (and eventually other conformance suites) against a live trillium server across the runtime × TLS matrix."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.10"
junit-parser = "1.5"
log = "0.4"
rcgen = "0.14"
trillium = { path = "../trillium" }
trillium-async-std = { path = "../async-std" }
trillium-rustls = { path = "../rustls" }
trillium-server-common = { path = "../server-common" }
trillium-smol = { path = "../smol" }
trillium-tokio = { path = "../tokio" }
