[package]
name = "trillium-conformance"
version = "0.0.0"
edition = "2024"
publish = false
description = "External-spec conformance runner for trillium. Runs h2spec (and eventually other conformance suites) against a live trillium server across the runtime × TLS matrix."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.10"
junit-parser = "1.5"
log = "0.4"
rcgen = "0.14"
trillium.workspace = true
trillium-async-std.workspace = true
trillium-rustls.workspace = true
trillium-server-common.workspace = true
trillium-smol.workspace = true
trillium-tokio.workspace = true
