[package]
name = "trillium-conn-id"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "conn ids for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
fastrand = "1.5.0"
trillium = { path = "../trillium", version = "^0.2.0" }

[dev-dependencies]
trillium-testing = { path = "../testing" }
uuid = { version = "0.8.2", features = ["v4"] }
