[package]
name = "trillium-conn-id"
version = "0.2.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "conn ids for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
fastrand = "2.0.1"
trillium = { path = "../trillium", version = "0.2.19" }

[dev-dependencies]
trillium-testing = { path = "../testing" }
uuid = { version = "1.6.1", features = ["v4"] }
