[package]
version = "0.4.1"
name = "trillium-cookies"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "cookies handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
log = "0.4.20"
trillium = { path = "../trillium", version = "0.2.13" }

[dependencies.cookie]
version = "0.18.0"
features = ["percent-encode", "secure"]

[dev-dependencies]
env_logger = "0.10.1"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
