[package]
version = "0.5.0-rc.1"
name = "trillium-cookies"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "cookies handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
log = "0.4.29"
trillium = { path = "../trillium", version = "1.0.0-rc.1" }

[dependencies.cookie]
version = "0.18.1"
features = ["percent-encode", "secure"]

[dev-dependencies]
env_logger = "0.11.10"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
