[package]
name = "trillium-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
env_logger = "0.8.4"
trillium = { path = "../trillium" }
trillium-router = { path = "../router" }
trillium-logger = { path = "../logger" }
trillium-cookies = { path = "../cookies" }
trillium-sessions = { path = "../sessions" }
trillium-websockets = { path = "../websockets" }
trillium-smol = { path = "../smol" }
trillium-askama = { path = "../askama" }
futures-lite = "1.12.0"
askama = "0.10.5"
trillium-static-compiled = { path = "../static-compiled/" }
trillium-proxy = { path = "../proxy" }
trillium-rustls = { path = "../rustls" }
log = "0.4.14"
trillium-head = { path = "../head" }

[dev-dependencies]
trillium-testing = { path = "../testing" }
