[package]
name = "trillium-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
env_logger = "0.9.0"
trillium = { path = "../trillium" }
trillium-router = { path = "../router" }
trillium-logger = { path = "../logger" }
trillium-cookies = { path = "../cookies" }
trillium-sessions = { path = "../sessions" }
trillium-websockets = { path = "../websockets" }
trillium-smol = { path = "../smol" }
trillium-askama = { path = "../askama" }
futures-lite = "1.12.0"
askama = "0.11.0"
trillium-static-compiled = { path = "../static-compiled/" }
trillium-proxy = { path = "../proxy" }
trillium-rustls = { path = "../rustls" }
log = "0.4.14"
trillium-head = { path = "../head" }
trillium-method-override = { path = "../method-override" }
trillium-conn-id = { path = "../conn-id" }
trillium-caching-headers = { path = "../caching-headers" }
trillium-compression = { path = "../compression" }

[dev-dependencies]
trillium-testing = { path = "../testing" }
