[package]
name = "trillium-forwarding"
version = "0.2.4"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "handler for trillium.rs that rewrites host/scheme from forwarded/x-forwarded headers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
cidr = "0.2.2"
log = "0.4.20"
trillium = { path = "../trillium", version = "0.2.13" }

[dev-dependencies]
trillium-logger = { path = "../logger" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
