[package]
name = "trillium-handlebars"
version = "0.2.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "handlebars templates for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
glob = "0.3.0"
handlebars = { version = "4.2.0", features = ["dir_source"] }
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
trillium = { path = "../trillium", version = "^0.2.0"}

[dev-dependencies]
env_logger = "0.10.0"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
