[package]
name = "trillium-handlebars"
version = "0.3.0-rc.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "handlebars templates for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
glob = "0.3.3"
handlebars = { version = "6.4.0", features = ["dir_source"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
trillium = { path = "../trillium", version = "1.0.0-rc.1" }

[dev-dependencies]
env_logger = "0.11.10"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
