[package]
name = "trillium-head"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "http head handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
futures-lite = "1.12.0"
trillium = { path = "../trillium", version = "^0.1.0" }

[dev-dependencies]
trillium-testing = { path = "../testing" }
