[package]
name = "trillium-head"
version = "0.2.3"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "http head handler for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
trillium = { path = "../trillium", version = "0.2.20" }

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
