[package]
name = "trillium-html-rewriter"
version = "0.0.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[features]
default = ["async-global-executor"]
tokio = ["tokio_crate"]
async-std = ["async_std_crate"]
smol = ["async-global-executor"]

[dependencies]
trillium = { path = "../trillium" }
futures-lite = "1.12.0"
async-global-executor = { version = "2.0.2", optional = true }
lol-async = "0.1.1"
cfg-if = "1.0.0"

[dependencies.tokio_crate]
version = "1.6.1"
optional = true
package = "tokio"
features = ["rt"]

[dependencies.async_std_crate]
version = "1.9.0"
optional = true
package = "async-std"
features = ["unstable"]

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-proxy = { path = "../proxy" }
env_logger = "0.8.3"
trillium-testing = { path = "../testing" }
