[package]
name = "trillium-html-rewriter"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "streaming html rewriter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[features]
async-std = ["async_std_crate"]
default = ["async-global-executor"]
smol = ["async-global-executor"]
tokio = ["tokio_crate"]

[dependencies]
async-global-executor = { version = "2.0.2", optional = true }
cfg-if = "1.0.0"
futures-lite = "1.12.0"
lol-async = "0.1.1"
trillium = { path = "../trillium", version = "^0.1.0" }

[dependencies.tokio_crate]
version = "1.6.1"
optional = true
package = "tokio"
features = ["rt"]

[dependencies.async_std_crate]
version = "1.9.0"
optional = true
package = "async-std"
features = ["unstable"]

[dev-dependencies]
env_logger = "0.8.3"
trillium-proxy = { path = "../proxy" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
