[package]
name = "trillium-html-rewriter"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "streaming html rewriter for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-io = "1.4.1"
futures-lite = "1.12.0"
lol-async = "0.1.2"
trillium = { path = "../trillium", version = "^0.1.0" }

[dev-dependencies]
async-global-executor = "2.0.2"
env_logger = "0.8.4"
trillium-logger = { path = "../logger" }
trillium-proxy = { path = "../proxy" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
