[package]
name = "trillium-http"
version = "0.3.17"
edition = "2024"
authors = ["Jacob Rothstein <hi@jbr.me>"]
description = "the http implementation for the trillium toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "http", "async"]
categories = ["web-programming::http-server", "web-programming"]

[features]
unstable = []
http-compat = ["dep:http0"]
http-compat-1 = ["dep:http1"]
serde = ["dep:serde"]
parse = []

[dependencies]
encoding_rs = "0.8.35"
futures-lite = "2.6.1"
hashbrown = "0.16.1"
http1 = { version = "1", optional = true, package = "http" }
http0 = { version = "0", optional = true, package = "http" }
httparse = "1.10.1"
httpdate = "1.0.3"
log = "0.4.29"
memchr = "2.8.0"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"], optional = true }
smallvec = "1.15.1"
smartcow = "0.2.1"
smartstring = "1.0.1"
thiserror = "2.0.18"
trillium-macros = { version = "0.0.6", path = "../macros" }
swansong = "0.3.3"
type-set = "0.3.2"
fastrand = "2.3.0"
fieldwork = "0.5.0"
sync_wrapper = "1.0.2"
pin-project-lite = "0.2"

[dev-dependencies]
async-compat = "0.2.5"
async-io = "2.6.0"
async-net = "2.0.0"
env_logger = "0.11.10"
smol = "2.0.2"
trillium-client = { path = "../client" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
trillium-http = { path = ".", features = ["http-compat"] }
futures-lite = "2"
pretty_assertions = "1.4.1"
test-harness = "0.3.1"
indoc = "2.0.7"
serde_json = "1.0.149"
async-channel = "2.5.0"
async-executor = "1.14.0"
core_affinity = "0.8.3"

[dev-dependencies.tokio]
version = "1.50.0"
features = ["rt", "net", "rt-multi-thread", "macros"]
package = "tokio"
