[package]
name = "trillium-http"
version = "1.3.8"
edition = "2024"
description = "the http implementation for the trillium toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "http", "async"]
categories = ["web-programming::http-server", "web-programming"]

[features]
unstable = []
http-compat-0 = ["dep:http0"]
http-compat-1 = ["dep:http1"]
serde = ["dep:serde"]

# Vestigial: the trillium-http http/1.x parser is now always selected. This feature is retained as a
# no-op for semver compatibility
parse = []

[dependencies]
encoding_rs = "0.8.35"
futures-lite = "2.6.1"
hashbrown = "0.17.0"
http1 = { version = "1", optional = true, package = "http" }
http0 = { version = "0", optional = true, package = "http" }
httpdate = "1.0.3"
log = "0.4.29"
memchr = "2.8.0"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"], optional = true }
smallvec = { version = "1.15.1", features = ["const_new"] }
smartcow = "0.2.1"
smartstring = "1.0.1"
thiserror = "2.0.18"
trillium-macros.workspace = true
swansong = "0.3.4"
type-set = "0.3.3"
fastrand = "2.3.0"
event-listener = "5"
fieldwork = "0.5.2"
sync_wrapper = "1.0.2"
pin-project-lite = "0.2"
atomic-waker = "1.1"

[dev-dependencies]
async-io = "2.6.0"
async-net = "2.0.0"
env_logger = "0.11.10"
smol = "2.0.2"
trillium-client = { path = "../client" }
trillium-http = { path = ".", features = ["unstable"] }
trillium-quinn = { path = "../quinn" }
trillium-rustls = { path = "../rustls" }
trillium-server-common = { path = "../server-common" }
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
futures-lite = "2"
pretty_assertions = "1.4.1"
test-harness = "0.3.1"
indoc = "2.0.7"
serde_json = "1.0.149"
async-channel = "2.5.0"
async-executor = "1.14.0"
core_affinity = "0.8.3"
unicycle = "0.10.2"
proptest = "1.7.0"
criterion = "0.5"

[[bench]]
name = "h1_head_parse"
harness = false

[[bench]]
name = "h1_body_read"
harness = false

[[bench]]
name = "headers_build"
harness = false
