[package]
name = "trillium-logger"
version = "0.4.4"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "logger for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async", "logging"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
colored = "2.1.0"
log = "0.4.20"
size = "0.4.1"
time = { version = "0.3.31", features = ["local-offset", "formatting", "macros"] }
trillium = { path = "../trillium", version = "0.2.19" }

[dev-dependencies]
access_log_parser = "0.8.0"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
trillium-http = { path = "../http", features = ["http-compat"] }

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
