[package]
name = "trillium-logger"
version = "0.5.0-rc.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2024"
description = "logger for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async", "logging"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
colored = "3.1.1"
log = "0.4.29"
size = "0.5.0"
time = { version = "0.3.47", features = [
        "local-offset",
        "formatting",
        "macros",
] }
trillium = { path = "../trillium", version = "1.0.0-rc.1" }
trillium-http = { path = "../http", version = "1.0.0-rc.1" }
url = "2.5.8"

[dev-dependencies]
access_log_parser = "0.11.0"
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
trillium-http = { path = "../http", features = ["http-compat-1"] }
async-channel = "2.5.0"

[package.metadata.cargo-udeps.ignore]
development = ["trillium-testing"]
