[package]
name = "trillium-macros"
version = "0.0.4"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "proc-macros for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "visit"] }

[dev-dependencies]
trillium = { path = "../trillium" }
trillium-testing = { path = "../testing" }
syn = { version = "2.0.39", features = ["extra-traits"] }
futures-lite = "2.0.1"
