[package]
name = "trillium-method-override"
version = "0.2.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "http method override for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium"
readme = "../README.md"
keywords = ["trillium", "framework", "async"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
trillium = { path = "../trillium", version = "0.2.18" }
querystrong = "0.3.0"

[dev-dependencies]
trillium-smol = { path = "../smol" }
trillium-testing = { path = "../testing" }
